# Tokamak-zkp-channel-manager

./: .cursorrules  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  ENV_VARIABLES.md  FIGMA_MCP_GUIDE.md  FROST_INTEGRATION.md  README.md  README_FIREBASE_API.md  TEST_ACCOUNTS_GUIDE.md  check_contract_function.js  cors.json  create_test_session.js  debug-contract-logic.js  debug_auth.js  debug_instance_hash.js  debug_session.js  debug_verifier_inputs.js  env.example  generateWithdrawalProof_fixed.ts  install-tokamak-zk-evm.sh  next.config.js  package-lock.json  package.json  simple_test.js  tailwind.config.js  test-accounts.html  test_auth.js  test_double_auth.js  test_fix.js  test_mpt_key.js  test_verifier_components.js  tsconfig.json  wrangler.toml
app/: globals.css  layout.tsx  not-found.tsx  page-simple.tsx  page-step1.tsx  page-step2.tsx  page.tsx  providers.tsx
backend/: .env.example  Cargo.toml  Dockerfile  PRODUCTION_GUIDE.md  README.md  docker-compose.yml
backend/k8s/: configmap.yaml  deployment.yaml
backend/scripts/: build-server.sh  docker-build.sh  health-check.sh  start-server.sh  stop-server.sh
components/: ChannelCard.tsx  ChannelCreatedBanner.tsx  ChannelParticipantInfo.tsx  ChannelTimeoutManager.tsx  ConsoleErrorFilter.tsx  ContractInfo.tsx  CreateChannelModal.tsx  DarkModeToggle.tsx  DepositModal.tsx  EmergencyWithdrawal.tsx  Footer.tsx  Header.tsx  L2MPTKeyBanner.tsx  Layout.tsx  LoadingSpinner.tsx  MobileMenuButton.tsx  MobileNavigation.tsx  NetworkDropdown.tsx  ProofCard.tsx  ProofSubmissionModal.tsx  Sidebar.tsx  SigningSessionModal.tsx  (+4 more)
(+287 files in other folders)
