[package]
name = "tokamak-dkg-server"
version = "0.1.0"
edition = "2021"
description = "Tokamak FROST DKG WebSocket Coordinator Server"
authors = ["Tokamak Team"]

[dependencies]
# FROST dependencies - using same versions as frost-dkg
frost-core = { git = "https://github.com/ZcashFoundation/frost", package = "frost-core", features = ["std", "serde"] }
frost-secp256k1 = { git = "https://github.com/ZcashFoundation/frost", package = "frost-secp256k1", features = ["std", "serde"] }

# Cryptography
k256 = { version = "0.13", features = ["arithmetic", "ecdsa", "sha256", "ecdh"] }
sha3 = "0.10"
sha2 = "0.10"
signature = "2"
aes-gcm = { version = "0.10.3", features = ["aes"] }
rand = "0.8"
rand_core = "0.6.4"

# Web server and WebSocket
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures = "0.3.31"

# Serialization and utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
hex = "0.4"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"